--- a/dex_monitor/package.json
+++ b/dex_monitor/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "@moralisweb3/common-evm-utils": "^2.27.2",
+    "dex_monitor": "file:",
     "dotenv": "^16.4.5",
     "moralis": "^2.27.2"
   }
