--- a/protochain/package.json
+++ b/protochain/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@types/jest": "^29.5.14",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
@@ -20,6 +21,7 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "crypto-js": "^4.2.0",
     "protochain": "file:"
   }
 }
